--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <div class="lang-buttons">
     <a href="https://tecmx-my.sharepoint.com/:u:/g/personal/a01620507_tec_mx/EZhlPl4RdnlMs1b6csI5bCsBUBABFAEXPB5W25vXuQWuuA?e=susOgE" target="_blank">ESPAÑOL</a>
     <a href="https://tecmx-my.sharepoint.com/:u:/g/personal/a01620507_tec_mx/EZJgU7QB9SxNrcykl8TfdF4Bu6V52lFRWXv_BmzNiIB5IA?e=N8V9fG" target="_blank">INGLÉS</a>
-    <a href="https://tecmx-my.sharepoint.com/:u:/g/personal/a01620507_tec_mx/EeQj1bBDk2lGiOutmLb9E4wBaUoBh0EeAcWH5ptDzM9dIg?e=rYOsMw" target="_blank">WIXÁRIKA</a>
+    <a href="https://tecmx-my.sharepoint.com/:u:/g/personal/a01620507_tec_mx/EZJgU7QB9SxNrcykl8TfdF4Bu6V52lFRWXv_BmzNiIB5IA?e=N8V9fG" target=" target="_blank">WIXÁRIKA</a>
   </div>
 
   <div class="footer">
